# Blaze-Api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
migrations/: 20240901235813_init.down.sql  20240901235813_init.up.sql
src/: config.rs  errors.rs  filters.rs  jwt_auth.rs.dep  main.rs  model.rs  response.rs  route.rs  schema.rs  session_auth.rs  validation.rs
src/handlers/: auth_handlers.rs  comment_handlers.rs  error_handlers.rs  mod.rs  post_handlers.rs  profile_handlers.rs  user_handlers.rs
