[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sql = "0.4.3"
sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.3", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tower-sessions = "0.12.3"
tower-sessions-redis-store = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = "9.0.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
